llvm/test/tools/llubi/attribute_noundef_ub.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @callee(i32 noundef %x) {
  ret void
}

define void @main() {
  call void @callee(i32 poison)
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @callee(i32 poison) at @main
; CHECK-NEXT: Immediate UB detected: The value poison violates noundef attribute.
; CHECK-NEXT: error: Execution of function 'main' failed.
